k8_manifest/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
  namespace: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-app
  template:
    metadata:
      labels:
        app: portfolio-app
    spec:
      containers:
      - name: portfolio-app
        image: 856660075226.dkr.ecr.us-west-2.amazonaws.com/stg-portfolio-us-west-2:49956de
        imagePullPolicy: Always
        resources:
          limits:
            memory: "90Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio-app
  ports:
  - port: 3000
